health question on curfew is not a text area

--- a/app/views/5/verification-report/electronic-monitoring-for-curfew.html
+++ b/app/views/5/verification-report/electronic-monitoring-for-curfew.html
@@ -84,7 +84,7 @@
             <div id="health-electronic-monitoring-hint" class="govuk-hint">
             Record any health conditions that may effect their suitability to
             receive an electronic monitoring curfew.</div>
-            <input class="govuk-input" id="health-electronic-monitoring" name="health-electronic-monitoring" type="text" value="{{data['health-electronic-monitoring']}}">
+            <textarea class="govuk-textarea" id="health-electronic-monitoring" name="health-electronic-monitoring" rows="5" aria-describedby="health-electronic-monitoring-hint">{{data['health-electronic-monitoring']}}</textarea>
           </div>
           <div class="govuk-form-group">
             <h3 class="govuk-heading-m" for="how-verified-health-electronic-monitoring">
