--- a/app/views/5/verification-report/assessor-details.html
+++ b/app/views/5/verification-report/assessor-details.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName="Offences details" %}
+{% set pageName="Assessor details" %}
 
 {% block content %}
   <div class="app-split-pane app-width-container">
@@ -11,7 +11,7 @@
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="defendant-details">Defendant details</a>
             </li>
-            <li class="app-subnav__section-item app-subnav__section-item--current">
+            <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offences">Offences</a>
             </li>
             <li class="app-subnav__section-item">
@@ -32,7 +32,7 @@
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="check-answers">Check your answers</a>
             </li>
-            <li class="app-subnav__section-item">
+            <li class="app-subnav__section-item app-subnav__section-item--current">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="assessor-details">Assessor details</a>
             </li>
             <li class="app-subnav__section-item">
@@ -48,15 +48,25 @@
             Dylan Adam Armstrong CRN: E234516
           </span>
           <h1 class="govuk-heading-l">
-            Offences
+            Assessor details
           </h1>
           <div class="govuk-form-group">
-            <h2 class="govuk-label-wrapper">
-              <label class="govuk-label govuk-label--m" for="offences">
-                List all offences this report relates to
-              </label>
-            </h2>
-            <textarea class="govuk-textarea" id="offences" name="offences" rows="5" aria-describedby="offences-hint">{{data['offences']}}</textarea>
+            <h2 class="govuk-heading-m" for="assessor-name">Assessor name</h2>
+            <input class="govuk-input" id="assessor-name" name="assessor-name" type="assessor-name" value="{{data['assessor-name']}}">
+          </div>
+          <div class="govuk-form-group">
+            <h2 class="govuk-heading-m" for="assessor-email">Assessor email</h2>
+            <input class="govuk-input" id="assessor-email" name="assessor-email" type="assessor-email" value="{{data['assessor-email']}}">
+          </div>
+          <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+          <div class="govuk-form-group">
+            <h2 class="govuk-heading-m" for="gatekeeper-email">Gatekeeper email</h2>
+            <textarea class="govuk-textarea" id="gatekeeper-email" name="gatekeeper-email" rows="3" aria-describedby="gatekeeper-email-hint">{{data['gatekeeper-email']}}</textarea>
+          </div>
+          <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+          <div class="govuk-form-group">
+            <h2 class="govuk-heading-m" for="gatekeeper-email">Report link</h2>
+            <p class="govuk-body">https://moj.pre-sentece-service/verification-reports/y4df2n68r9</p>
           </div>
           <button class="govuk-button" data-module="govuk-button">
             Save and continue
