--- a/app/views/5/verification-report/publish-report.html
+++ b/app/views/5/verification-report/publish-report.html
@@ -32,10 +32,10 @@
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="check-answers">Check your answers</a>
             </li>
-            <li class="app-subnav__section-item app-subnav__section-item--current">
+            <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="assessor-details">Assessor details</a>
             </li>
-            <li class="app-subnav__section-item">
+            <li class="app-subnav__section-item app-subnav__section-item--current">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="publish-report">Publish report</a>
             </li>
           </ul>
@@ -43,34 +43,21 @@
     </div>
     <div class="app-split-pane__content">
       <main id="main-content" class="app-content" role="main">
-        <form action="assessor-details" method="post" novalidate>
+        <form action="publish-report" method="post" novalidate>
           <span class="govuk-caption-l">
             Dylan Adam Armstrong CRN: E234516
           </span>
-          <h1 class="govuk-heading-l">
-            Assessor details
-          </h1>
-          <div class="govuk-form-group">
-            <h2 class="govuk-heading-m" for="assessor-name">Assessor name</h2>
-            <input class="govuk-input" id="assessor-name" name="assessor-name" type="assessor-name" value="{{data['assessor-name']}}">
+          <h1 class="govuk-heading-l">Are you sure you want to lock and publish
+            this report?</h1>
+          <p class="govuk-body">You cannot edit published reports.</p>
+          <p class="govuk-body"> Make sure that any gatekeeping or checking has
+            been completed.</p>
+          <div class="govuk-button-group">
+            <button class="govuk-button" data-module="govuk-button">
+              Lock and publish
+            </button>
+            <a class="govuk-link" href="assessor-details">Cancel</a>
           </div>
-          <div class="govuk-form-group">
-            <h2 class="govuk-heading-m" for="assessor-email">Assessor email</h2>
-            <input class="govuk-input" id="assessor-email" name="assessor-email" type="assessor-email" value="{{data['assessor-email']}}">
-          </div>
-          <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-          <div class="govuk-form-group">
-            <h2 class="govuk-heading-m" for="gatekeeper-email">Gatekeeper email</h2>
-            <textarea class="govuk-textarea" id="gatekeeper-email" name="gatekeeper-email" rows="3" aria-describedby="gatekeeper-email-hint">{{data['gatekeeper-email']}}</textarea>
-          </div>
-          <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-          <div class="govuk-form-group">
-            <h2 class="govuk-heading-m" for="gatekeeper-email">Report link</h2>
-            <p class="govuk-body">https://moj.pre-sentece-service/verification-reports/y4df2n68r9</p>
-          </div>
-          <button class="govuk-button" data-module="govuk-button">
-            Save and continue
-          </button>
         </form>
       </main>
     </div>
