Track work on index
- add summary of work we will be doing
- add placeholder for the previous ticket that I did not track for
  some reason

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,6 +13,16 @@
       <p><a class="govuk-link" href="/5/verification-report/start.html">Prototype</a></p>
       <ul class="govuk-list govuk-list--bullet">
         <li>
+          <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3296">
+            Updates to get ready for user research part 1. This is a collection
+            of changes we felt confident in making based on feedback from
+            subject matter experts.</a></p>
+        </li>
+        <li>
+          <p class="govuk-body"><a class="govuk-link" href="#">
+            PLACEHOLDER FOR WORK THAT GOT THE PROTOTYPE READY FOR LAST FRIDAY.</a></p>
+        </li>
+        <li>
           <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3290">
             Increment to V5.</a></p>
         </li>
