Track previous work on index
This is tidying up a gap in the index page that tracks our work. This
had not been tracked before so I'm adding in something that makes sense.

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -19,8 +19,10 @@
             subject matter experts.</a></p>
         </li>
         <li>
-          <p class="govuk-body"><a class="govuk-link" href="#">
-            PLACEHOLDER FOR WORK THAT GOT THE PROTOTYPE READY FOR LAST FRIDAY.</a></p>
+          <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3287">
+            Update prototype for run through with subject matter experts. The
+            purpose is to show what the team thinks is right so that people can
+            comment on it and help refine the questions.</a></p>
         </li>
         <li>
           <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3290">
