--- a/app/views/5/verification-report/defendant-details.html
+++ b/app/views/5/verification-report/defendant-details.html
@@ -54,13 +54,13 @@
             <h2 class="govuk-heading-m" for="full-name">
               Full name
             </h2>
-            <input class="govuk-input" id="full-name" name="full-name" type="full-name" value="{{data['full-name']}}">
+            <input class="govuk-input" id="full-name" name="full-name" type="full-name" value="{{data['full-name'] | default('Dylan Adam Armstrong')}}">
           </div>
           <div class="govuk-form-group">
             <h2 class="govuk-heading-m" for="full-name">
               CRN
             </h2>
-            <input class="govuk-input" id="test" name="case-reference-number" type="case-reference-number" value="{{data['case-reference-number']}}">
+            <input class="govuk-input" id="test" name="case-reference-number" type="case-reference-number" value="{{data['case-reference-number'] | default('E234516')}}">
           </div>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
@@ -77,7 +77,7 @@
                 <label class="govuk-label" for="address-line-1">
                   Address line 1
                 </label>
-                <input class="govuk-input" id="address-line-1" name="address-line-1" type="text" autocomplete="off" value="{{data['address-line-1']}}">
+                <input class="govuk-input" id="address-line-1" name="address-line-1" type="text" autocomplete="off" value="{{data['address-line-1'] | default('19 Penn Street')}}">
               </div>
               <div class="govuk-form-group">
                 <label class="govuk-label" for="address-line-2">
@@ -89,7 +89,7 @@
                 <label class="govuk-label" for="address-town">
                   Town or city
                 </label>
-                <input class="govuk-input govuk-!-width-two-thirds" id="address-town" name="address-town" autocomplete="off" type="text" value="{{data['address-town']}}">
+                <input class="govuk-input govuk-!-width-two-thirds" id="address-town" name="address-town" autocomplete="off" type="text" value="{{data['address-town'] | default('Oakworth')}}">
               </div>
               <div class="govuk-form-group">
                 <label class="govuk-label" for="address-county">
@@ -101,7 +101,7 @@
                 <label class="govuk-label" for="address-postcode">
                   Postcode
                 </label>
-                <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" autocomplete="off" type="text" value="{{data['address-postcode']}}">
+                <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" autocomplete="off" type="text" value="{{data['address-postcode'] | default('OA17')}}">
               </div>
             </fieldset>
           </div>
