Some side nav link is active / disabled depending on sections chosen

--- a/app/assets/sass/components/_app-navigation.scss
+++ b/app/assets/sass/components/_app-navigation.scss
@@ -120,3 +120,8 @@
   right: govuk-spacing(1);
   bottom: govuk-spacing(5);
 }
+
+.govuk-link--disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
