Updated address field hint text

--- a/app/views/5/verification-report/defendant-details.html
+++ b/app/views/5/verification-report/defendant-details.html
@@ -90,7 +90,7 @@
                   Current address
                 </h2>
                 <div id="address-hint" class="govuk-hint">
-                  This must be the address that the defendant will be staying at throughout their order.
+                  This must be the address that was provided to the court.
                 </div>
               </legend>
               <div class="govuk-form-group">
