Edited content to remove unpaid work typo

--- a/app/views/5/verification-report/required-sections.html
+++ b/app/views/5/verification-report/required-sections.html
@@ -90,7 +90,7 @@
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="verification-report-sections-3" name="verification-report-sections" type="radio" value="both" {{ checked("verification-report-sections", "both") }}>
                   <label class="govuk-label govuk-radios__label" for="verification-report-sections-3">
-                    Include sections for both unpaid and electronic monitoring
+                    Include sections for both unpaid work and electronic monitoring
                   </label>
                 </div>
               </div>
