Added hint text to explain it can be changed

--- a/app/views/5/verification-report/required-sections.html
+++ b/app/views/5/verification-report/required-sections.html
@@ -74,6 +74,9 @@
                   Tailor your report
                 </h1>
               </legend>
+              <div id="verification-report-sections-hint" class="govuk-hint">
+               You can change this later if you need to.
+              </div>
               <div class="govuk-radios" data-module="govuk-radios">
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="verification-report-sections" name="verification-report-sections" type="radio" value="unpaidWork" {{ checked("verification-report-sections", "unpaidWork") }}>
