Updated consent and mental health hint text

--- a/app/views/5/verification-report/electronic-monitoring-for-curfew.html
+++ b/app/views/5/verification-report/electronic-monitoring-for-curfew.html
@@ -69,8 +69,7 @@
             <h2 class="govuk-heading-m" for="consent-electronic-monitoring-curfew">
               Informed consent to an electronic monitoring curfew</h2>
             <div id="health-conditions-hint" class="govuk-hint">It is a legal
-              requirement that the defendant gives their informed consent to
-              submit to electronic monitoring.</div>
+              requirement that the defendant and anyone staying at the address they will be curfewed to gives their informed consent to to electronic monitoring.</div>
             <div class="govuk-form-group">
               <fieldset class="govuk-fieldset">
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -101,8 +100,9 @@
             <h2 class="govuk-heading-m" for="health-electronic-monitoring">
               Health</h2>
             <div id="health-electronic-monitoring-hint" class="govuk-hint">
-            Record any health conditions that may effect their suitability to
-            receive an electronic monitoring curfew.</div>
+              Record any health conditions that may effect their suitability to
+              receive an electronic monitoring curfew. <br/><br/>For example 
+              mental health conditions or substance misuse.</div>
             <textarea class="govuk-textarea" id="health-electronic-monitoring" name="health-electronic-monitoring" rows="5" aria-describedby="health-electronic-monitoring-hint">{{data['health-electronic-monitoring']}}</textarea>
           </div>
           <div class="govuk-form-group">
