Removed email field and gatekeeper field

--- a/app/views/5/verification-report/assessor-details.html
+++ b/app/views/5/verification-report/assessor-details.html
@@ -68,25 +68,11 @@
             Dylan Adam Armstrong CRN: E234516
           </span>
           <h1 class="govuk-heading-l">
-            Assessor details
+            Your details
           </h1>
           <div class="govuk-form-group">
-            <h2 class="govuk-heading-m" for="assessor-name">Assessor name</h2>
-            <input class="govuk-input" id="assessor-name" name="assessor-name" type="assessor-name" value="{{data['assessor-name']}}">
-          </div>
-          <div class="govuk-form-group">
-            <h2 class="govuk-heading-m" for="assessor-email">Assessor email</h2>
-            <input class="govuk-input" id="assessor-email" name="assessor-email" type="assessor-email" value="{{data['assessor-email']}}">
-          </div>
-          <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-          <div class="govuk-form-group">
-            <h2 class="govuk-heading-m" for="gatekeeper-email">Gatekeeper email</h2>
-            <textarea class="govuk-textarea" id="gatekeeper-email" name="gatekeeper-email" rows="3" aria-describedby="gatekeeper-email-hint">{{data['gatekeeper-email']}}</textarea>
-          </div>
-          <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-          <div class="govuk-form-group">
-            <h2 class="govuk-heading-m" for="gatekeeper-email">Report link</h2>
-            <p class="govuk-body">https://moj.pre-sentece-service/verification-reports/y4df2n68r9</p>
+            <h2 class="govuk-heading-m" for="assessor-name">Sign this report</h2>
+            <input class="govuk-input govuk-input--width-20" id="assessor-name" name="assessor-name" type="assessor-name" value="{{data['assessor-name']}}">
           </div>
           <button class="govuk-button" data-module="govuk-button">
             Save and continue
