--- a/app/views/5/verification-report/publish-report.html
+++ b/app/views/5/verification-report/publish-report.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName="Assessor details" %}
+{% set pageName="Publish report" %}
 
 {% block content %}
   <div class="app-split-pane app-width-container">
@@ -67,14 +67,13 @@
           <span class="govuk-caption-l">
             Dylan Adam Armstrong CRN: E234516
           </span>
-          <h1 class="govuk-heading-l">Are you sure you want to lock and publish
+          <h1 class="govuk-heading-l">Are you sure you want to publish
             this report?</h1>
-          <p class="govuk-body">You cannot edit published reports.</p>
-          <p class="govuk-body"> Make sure that any gatekeeping or checking has
-            been completed.</p>
+          <p class="govuk-body">This will lock the report. You will not be able to make any changes once you have published a report.</p>
+          <p class="govuk-body">If a colleague still needs to review this report do not publish it. <br/><br/>You can share a link to this report with them.</p>
           <div class="govuk-button-group">
             <button class="govuk-button" data-module="govuk-button">
-              Lock and publish
+              Publish and lock
             </button>
             <a class="govuk-link" href="assessor-details">Cancel</a>
           </div>
