--- a/app/views/5/verification-report/confirmation.html
+++ b/app/views/5/verification-report/confirmation.html
@@ -18,8 +18,7 @@
       <h2 class="govuk-heading-m">Next steps</h2>
       <ol class="govuk-list govuk-list--number govuk-!-margin-bottom-9">
         <li><a href="#" class="govuk-link">Download the report</a></li>
-        <li>Share the report with the appropriate court using
-          their electronic storage.
+        <li>Upload the report to share it with the court.
           <ul class="govuk-list govuk-list--bullet">
             <li>
               <p class="govuk-body">
