updated links to be directional - upload to

--- a/app/views/5/verification-report/confirmation.html
+++ b/app/views/5/verification-report/confirmation.html
@@ -23,13 +23,13 @@
             <li>
               <p class="govuk-body">
                 <a href="#" class="govuk-link" rel="noreferrer noopener" target="_blank">
-                MAGISTRATE STORAGE (opens in new tab)</a>
+                Upload to MAGISTRATE STORAGE (opens in new tab)</a>
               </p>
             </li>
             <li>
               <p class="govuk-body">
                 <a href="#" class="govuk-link" rel="noreferrer noopener" target="_blank">
-                COURT STORAGE (opens in new tab)</a>
+                Upload to Court store (opens in new tab)</a>
               </p>
             </li>
           </ul>
