Check answers shows the questions that have been asked

--- a/app/views/5/verification-report/common-data.html
+++ b/app/views/5/verification-report/common-data.html
@@ -2,6 +2,19 @@
 
 {% set pageName="Common data" %}
 
+{% block pageScripts %}
+  <script type="text/javascript">
+    function showAnotherAddress() {
+      var x = document.getElementById("another-address");
+      if (x.style.display === "none") {
+        x.style.display = "block";
+      } else {
+        alert("This would all you to add a 2nd, 3rd, etc address in the real thing.")
+      }
+    }
+  </script>
+{% endblock %}
+
 {% block content %}
   <div class="app-split-pane app-width-container">
     <div class="app-split-pane__nav">
@@ -98,39 +111,66 @@
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-                <h2 class="govuk-fieldset__heading">
-                  Other addresses
-                </h2>
+                <h2 class="govuk-fieldset__heading">Addresses</h2>
               </legend>
-              <div class="govuk-form-group">
-                <label class="govuk-label" for="other-address-line-1">
-                  Other address line 1
-                </label>
-                <input class="govuk-input" id="other-address-line-1" name="other-address-line-1" type="text" autocomplete="off" value="{{data['other-address-line-1']}}">
+              <div id="changedName-hint" class="govuk-hint">
+                These are all the addresses relevant to the defendant and any
+                interventions they are being considered for
               </div>
-              <div class="govuk-form-group">
-                <label class="govuk-label" for="address-line-2">
-                  Other address line 2 (optional)
-                </label>
-                <input class="govuk-input" id="other-address-line-2" name="other-address-line-2" type="text" autocomplete="off" value="{{data['other-address-line-2']}}">
+              <h3 class="govuk-heading-s">Current Address</h3>
+              <p class="govuk-body">
+                {{data['address-line-1']}}<br />
+                  {% if (data['address-line-2']) %}
+                    {{data['address-line-2']}}<br />
+                  {% endif %}
+                  {{data['address-town']}}<br />
+                  {% if (data['address-county']) %}
+                    {{data['address-county']}}<br />
+                  {% endif %}
+                  {{data['address-postcode']}}
+              </p>
+              <div id="another-address" class="govuk-!-margin-bottom-9" style="display:none;">
+                <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+                <h3 class="govuk-heading-s">New address</h3>
+                <div class="govuk-form-group">
+                  <label class="govuk-label" for="other-address-description">
+                    Address description
+                  </label>
+                  <input class="govuk-input govuk-input--width-20"" id="other-address-description" name="other-address-description" type="text" autocomplete="off" value="{{data['other-address-description']}}">
+                </div>
+                <div class="govuk-form-group">
+                  <label class="govuk-label" for="other-address-line-1">
+                    Address line 1
+                  </label>
+                  <input class="govuk-input" id="other-address-line-1" name="other-address-line-1" type="text" autocomplete="off" value="{{data['other-address-line-1']}}">
+                </div>
+                <div class="govuk-form-group">
+                  <label class="govuk-label" for="address-line-2">
+                    Address line 2 (optional)
+                  </label>
+                  <input class="govuk-input" id="other-address-line-2" name="other-address-line-2" type="text" autocomplete="off" value="{{data['other-address-line-2']}}">
+                </div>
+                <div class="govuk-form-group">
+                  <label class="govuk-label" for="other-address-town">
+                    Town or city
+                  </label>
+                  <input class="govuk-input govuk-!-width-two-thirds" id="other-address-town" name="other-address-town" autocomplete="off" type="text" value="{{data['other-address-town']}}">
+                </div>
+                <div class="govuk-form-group">
+                  <label class="govuk-label" for="address-county">
+                    County (optional)
+                  </label>
+                  <input class="govuk-input govuk-!-width-two-thirds" id="other-address-county" name="other-address-county" autocomplete="off" type="text" value="{{data['other-address-county']}}">
+                </div>
+                <div class="govuk-form-group">
+                  <label class="govuk-label" for="other-address-postcode">
+                    Postcode
+                  </label>
+                  <input class="govuk-input govuk-input--width-10" id="other-address-postcode" name="other-address-postcode" type="text" autocomplete="off" value="{{data['other-address-postcode']}}">
+                </div>
               </div>
-              <div class="govuk-form-group">
-                <label class="govuk-label" for="other-address-town">
-                  Other town or city
-                </label>
-                <input class="govuk-input govuk-!-width-two-thirds" id="other-address-town" name="other-address-town" autocomplete="off" type="text" value="{{data['other-address-town']}}">
-              </div>
-              <div class="govuk-form-group">
-                <label class="govuk-label" for="address-county">
-                  Other county (optional)
-                </label>
-                <input class="govuk-input govuk-!-width-two-thirds" id="other-address-county" name="other-address-county" autocomplete="off" type="text" value="{{data['other-address-county']}}">
-              </div>
-              <div class="govuk-form-group">
-                <label class="govuk-label" for="other-address-postcode">
-                  Other postcode
-                </label>
-                <input class="govuk-input govuk-input--width-10" id="other-address-postcode" name="other-address-postcode" type="text" autocomplete="off" value="{{data['other-address-postcode']}}">
+              <div id="add-another-address" class="govuk-button govuk-button--secondary" data-module="govuk-button" onclick="showAnotherAddress()">
+                Add another address
               </div>
             </fieldset>
           </div>
