--- a/app/views/5/verification-report/electronic-monitoring-for-curfew.html
+++ b/app/views/5/verification-report/electronic-monitoring-for-curfew.html
@@ -98,10 +98,10 @@
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
             <h2 class="govuk-heading-m" for="health-electronic-monitoring">
-              Health</h2>
+              Health conditions</h2>
             <div id="health-electronic-monitoring-hint" class="govuk-hint">
               Record any health conditions that may effect their suitability to
-              receive an electronic monitoring curfew. <br/><br/>For example 
+              receive an electronic monitoring curfew. <br/><br/>For example
               mental health conditions or substance misuse.</div>
             <textarea class="govuk-textarea" id="health-electronic-monitoring" name="health-electronic-monitoring" rows="5" aria-describedby="health-electronic-monitoring-hint">{{data['health-electronic-monitoring']}}</textarea>
           </div>
