--- a/app/views/5/verification-report/common-data.html
+++ b/app/views/5/verification-report/common-data.html
@@ -9,7 +9,7 @@
       if (x.style.display === "none") {
         x.style.display = "block";
       } else {
-        alert("This would all you to add a 2nd, 3rd, etc address in the real thing.")
+        alert("This would allow you to add a 2nd, 3rd, etc address in the real thing.")
       }
     }
   </script>
@@ -115,7 +115,7 @@
               </legend>
               <div id="changedName-hint" class="govuk-hint">
                 These are all the addresses relevant to the defendant and any
-                interventions they are being considered for
+                interventions they are being considered for.
               </div>
               <h3 class="govuk-heading-s">Current Address</h3>
               <p class="govuk-body">
