--- a/app/views/6/verification-report/confirmation.html
+++ b/app/views/6/verification-report/confirmation.html
@@ -18,18 +18,19 @@
       <h2 class="govuk-heading-m">Next steps</h2>
       <ol class="govuk-list govuk-list--number govuk-!-margin-bottom-9">
         <li><a href="#" class="govuk-link">Download the report</a></li>
-        <li>Upload the report to share it with the court.
+        <li>Upload the report to the apropaite digital file store, to share it
+          with the court.
           <ul class="govuk-list govuk-list--bullet">
             <li>
               <p class="govuk-body">
-                <a href="#" class="govuk-link" rel="noreferrer noopener" target="_blank">
-                Upload to MAGISTRATE STORAGE (opens in new tab)</a>
+                <a href="https://prosecuting.cjscp.org.uk/" class="govuk-link" rel="noreferrer noopener" target="_blank">
+                Upload to Common Platform (opens in new tab)</a>
               </p>
             </li>
             <li>
               <p class="govuk-body">
                 <a href="#" class="govuk-link" rel="noreferrer noopener" target="_blank">
-                Upload to Court store (opens in new tab)</a>
+                Upload to Court store NEED A URL LILLY HARRINGTON CAN HELP (opens in new tab)</a>
               </p>
             </li>
           </ul>
