Dependants becomes text area
We expect dependant data to be more than one line.

--- a/app/views/6/verification-report/common-data.html
+++ b/app/views/6/verification-report/common-data.html
@@ -225,7 +225,7 @@
             <div id="dependant-caring-responsibilities-hint" class="govuk-hint">
               Record and dependants and caring responsibilities that could impact someone's ability to do unpaid work or receive an electronic monitoring curfew.
             </div>
-            <input class="govuk-input" id="dependant-caring-responsibilities" name="dependant-caring-responsibilities" type="text" value="{{data['dependant-caring-responsibilities']}}">
+            <textarea class="govuk-textarea" id="dependant-caring-responsibilities" name="dependant-caring-responsibilities" rows="5" aria-describedby="dependant-caring-responsibilities-hint">{{data['dependant-caring-responsibilities']}}</textarea>
           </div>
           <div class="govuk-form-group">
             <h3 class="govuk-heading-m" for="how-verified-dependants">
